--- a/Main Page.html
+++ b/Main Page.html
@@ -4,6 +4,10 @@
     <html>
     <body> <body style="background-color:rgb(225, 195, 163);"></body>
     <h1> Welcome to Swatswords</h1>
-    <p style="font-family:verdana" style="font-size:30px"> I am hosted with Github Pages. </p>
+    <p style="font-family:verdana;font-size:30px"> I am hosted with Github Pages. </p>
+
+
+
+
     </body>
     </html>
