--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1> Hello World</h1>
-<p> I am hosted with Github Pages. </p>
+<body> <body style="background-color:rgb(225, 195, 163);"></body>
+<h1 style="font-family:verdana;font-size:30px"> Welcome to Swatswords!</h1>
+<p> Scroll for swords </p>
+
+
+
+
 </body>
 </html>
