--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body> <body style="background-color:rgb(225, 195, 163);"></body>
-<h1 style="font-family:verdana;font-size:30px"> Welcome to Swatswords!</h1>
+<center style="font-family:verdana;font-size:30px"> Welcome to Swatswords!</center>
 <p> Scroll for swords </p>
 
 
