--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body> <body style="background-color:rgb(225, 195, 163);"></body>
 <h1><center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center> </h1>
 <p> Scroll for swords </p>
+<p> Katana -- Broadsword </p>
+
 
 
 
