--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
 <!DOCTYPE html>
 <html>
 <body> <body style="background-color:rgb(225, 195, 163);"></body>
-<h1><center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center> </h1>
+<h1>
+    <title>Swatswords</title>
+	<style>
+		.container {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+		}
+		.image {
+			margin: 10px;
+			width: 300px;
+			height: 300px;
+			object-fit: cover;
+		}
+	</style>
+    
+    
+   <!-- <center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center>  -->
+
+</h1>
 <p> Scroll for swords </p>
+<body>
+	<h1>Swatswords</h1>
+	<div class="container">
+		<img class="image" src="image1.jpg" alt="Image 1">
+		<img class="image" src="image2.jpg" alt="Image 2">
+		<img class="image" src="image3.jpg" alt="Image 3">
+	</div>
+</body>
 <p> Katana -- Broadsword </p>
 
 
