--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</style>
     
     
-   <!-- <center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center>  -->
+   <center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center>  
 
 </h1>
 <p> Scroll for swords </p>
