--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<h1>Swatswords</h1>
 	<div class="container">
-		<img class="image" src="image1.jpg" alt="Image 1">
+		<img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
 		<img class="image" src="image2.jpg" alt="Image 2">
 		<img class="image" src="image3.jpg" alt="Image 3">
 	</div>
