--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 
 </h1>
 <p> Scroll for swords </p>
+
+<style>
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .image {
+        margin: 10px;
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        border: 5px solid white;
+        box-sizing: border-box;
+    }
+</style>
 <body>
 	<h1>Swatswords</h1>
 	<div class="container">
