--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			margin: 10px;
 			width: 300px;
 			height: 300px;
+            border: 5px solid white;
 			object-fit: cover;
 		}
 	</style>
