--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         height: 300px;
         object-fit: cover;
         border: 5px solid white;
+        border-radius: 20px;
         box-sizing: border-box;
     }
 </style>
