--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>
     <title>Swatswords</title>
     
-   <center style="font-family:verdana;font-size:60px"> Welcome to Swatswords!</center>  
+   <center style="font-family:verdana;font-size:60px"> SwatSwords!</center>  
 
 </h1>
 <p> Scroll for swords </p>
@@ -17,9 +17,9 @@
         align-items: center;
     }
     .image {
-        margin: 10px;
+        margin: 20px;
         width: 300px;
-        height: 300px;
+        height: 500px;
         object-fit: cover;
         border: 5px solid white;
         border-radius: 20px;
@@ -30,6 +30,9 @@
 	<h1>Swatswords</h1>
 	<div class="container">
 		<img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
+		<img class="image" src="image2.jpg" alt="Image 2">
+		<img class="image" src="image3.jpg" alt="Image 3">
+        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
 		<img class="image" src="image2.jpg" alt="Image 2">
 		<img class="image" src="image3.jpg" alt="Image 3">
 	</div>
