--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .image {
         margin: 20px;
         width: 300px;
-        height: 500px;
+        height: 400px;
         object-fit: cover;
         border: 5px solid white;
         border-radius: 20px;
@@ -29,9 +29,9 @@
 <body>
 	<h1>Swatswords</h1>
 	<div class="container">
-		<img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
-		<img class="image" src="image2.jpg" alt="Image 2">
-		<img class="image" src="image3.jpg" alt="Image 3">
+		<img class="image" src="Sword Photos/Stinger_LOTR.jpg" alt="Image 1">
+		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2">
+		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3">
         <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
 		<img class="image" src="image2.jpg" alt="Image 2">
 		<img class="image" src="image3.jpg" alt="Image 3">
