--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <h1>
     <title>Swatswords</title>
     
-   <center style="font-family:verdana;font-size:60px"> SwatSwords!</center>  
+   <center style="font-family:verdana;font-size:60px"> SwatSwords</center>  
 
 </h1>
-<p> Scroll for swords </p>
+<center style="font-family:verdana;font-size:30px"p> Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media </p>
+
+
 
 <style>
     .container {
