--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
 <h1>
     <title>Swatswords</title>
     
-   <center style="font-family:verdana;font-size:60px"> SwatSwords</center>  
+    <style>
+		/* Navigation bar styles */
+		nav {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: white;
+			padding: 20px;
+			box-shadow: 0 0 10px rgba(0,0,0,0.2);
+		}
+		nav ul {
+			display: flex;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+		nav li {
+			margin-right: 20px;
+		}
+		nav a {
+			color: black;
+			text-decoration: none;
+			font-weight: bold;
+			font-size: 18px;
+			transition: all 0.3s ease;
+		}
+		nav a:hover {
+			color: gray;
+		} 
 
 </h1>
 <center style="font-family:verdana;font-size:30px"p> Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media </p>
-
-
 
 <style>
     .container {
@@ -29,6 +55,18 @@
     }
 </style>
 <body>
+    <nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">Full Catalog</a></li>
+			<li><a href="#">Extra</a></li>
+		</ul>
+	</nav>
+
 	<h1>Swatswords</h1>
 	<div class="container">
 		<img class="image" src="Sword Photos/Stinger_LOTR.jpg" alt="Image 1">
