--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body> <body style="background-color:rgb(225, 195, 163);"></body>
 <h1>
-    <title>Swatswords</title>
     
+    <center style="font-family:verdana;font-size:60px"> SwatSwords</center> 
     <style>
 		/* Navigation bar styles */
 		nav {
