--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h1>
     
     <center style="font-family:verdana;font-size:60px"> SwatSwords</center> 
+
+    
     <style>
 		/* Navigation bar styles */
 		nav {
@@ -35,7 +37,8 @@
 		} 
 
 </h1>
-<center style="font-family:verdana;font-size:30px"p> Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media </p>
+<p><center style="font-family:verdana;font-size:30px"p> Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media </p>
+
 
 <style>
     .container {
