--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			background-color: white;
-			padding: 20px;
+			background-color: rgb(255, 255, 255);
+            border: 5px solid rgb(0, 0, 0);
+            border-radius: 20px;
+			padding: 10px;
 			box-shadow: 0 0 10px rgba(0,0,0,0.2);
 		}
 		nav ul {
