--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             border-radius: 20px;
 			padding: 10px;
 			box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            font-family: Arial, verdana;
 		}
 		nav ul {
 			display: flex;
@@ -25,7 +26,7 @@
 			padding: 0;
 		}
 		nav li {
-			margin-right: 20px;
+			margin-right: 10px;
 		}
 		nav a {
 			color: black;
