--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</ul>
 	</nav>
 
-	<h1>Swatswords</h1>
+	<center style="font-family:verdana;font-size:30px"h1> Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media </h1>
 	<div class="container">
 		<img class="image" src="Sword Photos/Stinger_LOTR.jpg" alt="Image 1">
 		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2">
