Added link to info page

--- a/Main Page.html
+++ b/Main Page.html
@@ -3,8 +3,8 @@
     <!DOCTYPE html>
     <html>
     <body> <body style="background-color:rgb(225, 195, 163);"></body>
-    <h1> Welcome to Swatswords</h1>
-    <p style="font-family:verdana;font-size:30px"> I am hosted with Github Pages. </p>
+    <h1> Information</h1>
+    <p style="font-family:verdana;font-size:30px"> I like swords.  This is a test. </p>
 
 
 
