--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <nav>
 		<ul>
 			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="Main Page.html">About</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 		<ul>
