--- a/Main Page.html
+++ b/Main Page.html
@@ -6,7 +6,50 @@
     <h1> Information</h1>
     <p style="font-family:verdana;font-size:30px"> I like swords.  This is a test. </p>
 
-
+    <style>
+		/* Navigation bar styles */
+		nav {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: rgb(255, 255, 255);
+            border: 5px solid rgb(0, 0, 0);
+            border-radius: 20px;
+			padding: 10px;
+			box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            font-family: Arial, verdana;
+		}
+		nav ul {
+			display: flex;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+		nav li {
+			margin-right: 10px;
+		}
+		nav a {
+			color: black;
+			text-decoration: none;
+			font-weight: bold;
+			font-size: 18px;
+			transition: all 0.3s ease;
+		}
+		nav a:hover {
+			color: gray;
+		} 
+        <body>
+    <nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="Main Page.html">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">Full Catalog</a></li>
+			<li><a href="#">Extra</a></li>
+		</ul>
+	</nav>
 
 
     </body>
