--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			transition: all 0.3s ease;
 		}
 		nav a:hover {
-			color: gray;
+			color: rgb(239, 173, 173);
 		} 
            
                 .container {
