Changing Photo Size

--- a/Main Page.html
+++ b/Main Page.html
@@ -2,9 +2,9 @@
 
     <!DOCTYPE html>
     <html>
-    <body> <body style="background-color:rgb(225, 195, 163);"></body>
+    <body> <body style="background-color:rgb(225, 163, 190);"></body>
     <h1> Information</h1>
-    <p style="font-family:verdana;font-size:30px"> I like swords.  This is a test. </p>
+    <center> <p> style="font-family:verdana;font-size:30px"> I like swords.  This is a test. </center></p>
 
     <style>
 		/* Navigation bar styles */
