--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     justify-content: center;
                     align-items: center;
                 }
-                .image {
+                .image-container {
                     margin: 20px;
                     width: 250px;
                     height: 350px;
@@ -52,7 +52,18 @@
                     border-radius: 20px;
                     box-sizing: border-box;
                 }
-            </style>
+                .image-container:hover {
+		            	border-color: rgb(60, 57, 216); /* Change the border color on hover */
+                    }
+                    .image {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        transition: all 0.3s ease;
+                    }
+                    .image:hover {
+                        transform: scale(1.1); /* Scale up the image on hover */
+                        </style>
 
 <body>
     <nav>
