--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                 .image-container:hover {
 		            	border-color: rgb(60, 57, 216); /* Change the border color on hover */
                     }
-                    .image {
+              /*      .image {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
                         transition: all 0.3s ease;
+               */         
                     }
                     .image:hover {
                         transform: scale(1.1); /* Scale up the image on hover */
