--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 .image-container:hover {
 		            	border-color: rgb(60, 57, 216); /* Change the border color on hover */
                     }
-              /*      .image {
-                        width: 100%;
-                        height: 100%;
+                    .image {
+                        width: 15%;
+                        height: 15%;
                         object-fit: cover;
                         transition: all 0.3s ease;
-               */         
+                        
                     }
                     .image:hover {
                         transform: scale(1.1); /* Scale up the image on hover */
