--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 		            	border-color: rgb(60, 57, 216); /* Change the border color on hover */
                     }
                     .image {
-                        /*width: 15%;
-                        height: 15%; */
-                        object-fit: cover;
+                        width: 15%;
+                        height: 15%; 
+                       /* object-fit: cover; */
                         transition: all 0.3s ease;
                         
                     }
