--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             transition: all .3s ease;
         }
         nav a:hover {
-            color: rgb(239, 173, 173);
+            color: rgb(234, 167, 167);
         } 
            /*image specifications*/
                 .container {
@@ -66,8 +66,8 @@
 
 
 
-
-<body style="background-color:rgb(225, 163, 190);">
+<body>
+<body style= "background-color: rgb(360, 167, 125)";>
     <h1  style="font-family:verdana; font-size:60px;"><center> SwatSwords</center></h1>
     <nav>
 		<ul>
