--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     .image:hover {
                         transform: scale(1.1); /* Scale up the image on hover */
                     }
-                        #Image_1:{
-                            transform:scale(.7);
+                        #image_1{
+                            transform: scale(1); /* scale test */
                           }
     </style>     
 </head>
@@ -88,12 +88,11 @@
 	<h1 style="font-family:verdana;font-size:15px;"><center>Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media</center></h1>
 	<h2 style="font-family:verdana;font-size:30px;"><center>Available Swords:</center></h2>
     <div class="container">
-		<img class="image" src="Sword Photos/Zuko_Sword-Vertical.jpg" alt="Image_1">
+		<img class="image" src="Sword Photos/Zuko_Sword-Vertical.jpg" alt="Image_1" id="image_1">
 		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2">
 		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3">
-        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 1">
-		/*<img class="image" src="image2.jpg" alt="Image 2">
-		<img class="image" src="image3.jpg" alt="Image 3">*/
+        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 4">
+		
 	</div>
 </body>
 </html>
