--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 }
                 .image {
                     margin: 30px;
-                    max-width: 250px;
+                    width: 250px;
                     height: 350px;
                     object-fit: cover;
                     border: 8px solid white;
@@ -62,9 +62,17 @@
                     .image:hover {
                         transform: scale(1.1); /* Scale up the image on hover */
                     }
-                        #image_1{
+                        #image_2{
+                            width:300px;
                             transform: scale(1); /* scale test */
                           }
+                          #image_1{
+                        
+                            transform: scale(1); /* scale test */
+                          }
+                        #image_3{
+                            width:400px;
+                        }
     </style>     
 </head>
 
@@ -89,9 +97,9 @@
 	<h2 style="font-family:verdana;font-size:30px;"><center>Available Swords:</center></h2>
     <div class="container">
 		<img class="image" src="Sword Photos/Zuko_Sword-Vertical.jpg" alt="Image_1" id="image_1">
-		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2">
-		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3">
-        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 4">
+		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2" id="image_2">
+		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3" id="image_3">
+        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 4" id="image_4">
 		
 	</div>
 </body>
