--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
                         #image_3{
                             width:400px;
                         }
+                      /*  #grad {
+                        background-image: linear-gradient(180deg, red, yellow);
+                        } */
     </style>     
 </head>
 
 
 
 <body>
-<body style= "background-color: rgb(360, 167, 125)";>
+<body style= "background-image: linear-gradient(rgb(360, 167, 125), rgb(227, 193, 193));";>    
     <h1  style="font-family:verdana; font-size:60px;"><center> SwatSwords</center></h1>
     <nav>
 		<ul>
