--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <h1  style="font-family:verdana; font-size:60px;"><center> SwatSwords</center></h1>
     <nav>
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="Main Page.html">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="https://www.instagram.com/swatswords/">Contact</a></li>
 		</ul>
 		<ul>
 			<li><a href="#">Full Catalog</a></li>
