Added Stop Sign Axe Picture

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                         }
                       /*  #grad {
                         background-image: linear-gradient(180deg, red, yellow);
+                        		<img class="image" src="Sword Photos/Zuko_Sword-Vertical.jpg" alt="Image_1" id="image_1">
+
                         } */
     </style>     
 </head>
@@ -99,11 +101,10 @@
 	<h1 style="font-family:verdana;font-size:15px;"><center>Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media</center></h1>
 	<h2 style="font-family:verdana;font-size:30px;"><center>Available Swords:</center></h2>
     <div class="container">
-		<img class="image" src="Sword Photos/Zuko_Sword-Vertical.jpg" alt="Image_1" id="image_1">
 		<img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2" id="image_2">
 		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3" id="image_3">
-        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 4" id="image_4">
-		
+        <img class="image" src="Sword Photos/Stop_Sign_Axe.jpg" alt="Image 4" id="image_4">
+        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 5" id="image_5">
 	</div>
 </body>
 </html>
