--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     }
                         #image_2{
                             width:300px;
-                            transform: scale(1); /* scale test */
+                           /* transform: scale(1.1); /* scale test */
                           }
                           #image_1{
                         
-                            transform: scale(1); /* scale test */
+                            transform: scale(1.1); /* scale test */
                           }
                         #image_3{
                             width:400px;
@@ -92,6 +92,7 @@
 			<li><a href="Main Page.html">About</a></li>
 			<li><a href="https://www.instagram.com/swatswords/">Contact</a></li>
 		</ul>
+
 		<ul>
 			<li><a href="#">Full Catalog</a></li>
 			<li><a href="#">Extra</a></li>
