--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="Main Page.html">About</a></li>
-			<li><a href="https://www.instagram.com/swatswords/">Contact</a></li>
+			<li><a href="https://instagram.com/swatswords?igshid=Mzc1MmZhNjY=">Contact</a></li>
 		</ul>
 
 		<ul>
