--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="Main Page.html">About</a></li>
+			<li><a href="About Page.html">About</a></li>
 			<li><a href="Contact Page.html">Contact</a></li>
 		</ul>
 
