New page outline

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
     
-<body style= "background-image: linear-gradient(rgb(360, 167, 125), rgb(227, 193, 193));";>    
+<body style= "background-image: linear-gradient(rgb(360, 167, 125), rgb(227, 193, 193));  border: 8px solid rgb(255, 255, 255); border-radius: 20px; box-sizing: border-box; ";>    
     <h1  style="font-family:verdana; font-size:60px;"><center> SwatSwords</center></h1>
         
 
