New Full Catalog Page

--- a/About Page.html
+++ b/About Page.html
@@ -20,8 +20,8 @@
             </ul>
     
             <ul>
-                <li><a href="#">Full Catalog</a></li>
-                <li><a href="#">Extra</a></li>
+                <li><a href="Full Catalog.html">Full Catalog</a></li>
+                <li><a href="#">Order Custom</a></li>
             </ul>
         </nav>
 
