--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		</ul>
 
 		<ul>
-			<li><a href="#">Full Catalog</a></li>
-			<li><a href="#">Extra</a></li>
+			<li><a href="Full Catalog.html">Full Catalog</a></li>
+			<li><a href="#">Order Custom</a></li>
 		</ul>
 	</nav>
 
@@ -114,6 +114,8 @@
 		<img class="image" src="Sword Photos/Twin_Zuko_Swords.jpg" alt="Image 3" id="image_3">
         <img class="image" src="Sword Photos/Stop_Sign_Axe.jpg" alt="Image 4" id="image_4">
         <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 5" id="image_5">
+        <img class="image" src="Sword Photos/Sword_in_grass.JPG" alt="Image 6" id="image_6">
+
 	</div>
     <div style="display: flex; justify-content: center; align-items: center;">
         <div style = "width: 590px; height: 90vh; padding:50; display: flex; justify-content: center; align-items: center; background-color: rgb(255, 255, 255); border-radius:25px">
