She ra sword added

--- a/Full Catalog.html
+++ b/Full Catalog.html
@@ -60,6 +60,8 @@
     
             <h2 style="font-family:verdana;font-size:30px;"><center>All Swords:</center></h2>
         <div class="container">
+
+            <img class="image" src="Sword Photos/She-Ra_Sword.jpg" alt="Image 7" id="image_7">
             <img class="image" src="Sword Photos/Stinger_LOTR.jpg" alt="Image 9" id="image_9">
             <img class="image" src="Sword Photos/Glod_Silver_Machete.jpg" alt="Image 8" id="image_8">
             <img class="image" src="Sword Photos/Elucidator_Sword.jpg" alt="Image 2" id="Fimage_2">
