--- a/Full Catalog.html
+++ b/Full Catalog.html
@@ -52,8 +52,8 @@
             </ul>
     
             <ul>
-                <li><a href="#">Full Catalog</a></li>
-                <li><a href="#">Order Custom</a></li>
+                <li><a href="Full Catalog.html">Full Catalog</a></li>
+                <li><a href="https://forms.gle/T1LNCL6cf1no2a8b9">Order Custom</a></li>
             </ul>
         </nav>
     
