--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
         </script>
         
 
-    <div style="background-color: rgb(255, 255, 255); align-items: center; background-color: rgb(255, 255, 255); border: 5px solid rgb(0, 0, 0); border-radius: 10px; padding: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2); "> 
-    <h2 style="font-family:verdana;font-size:20px;"><center>Local woodworker and metalsmith at Swarthmore College focused on making prop swords and weapons from history and popular media</center> </h2>
+    <div style="background-color: rgb(186, 120, 120); align-items: center; 
+    background-color: rgb(245, 166, 195); border: 4px solid rgb(238, 228, 228); 
+    border-radius: 10px; padding: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2); "> 
+
+    <h2 style="font-family:verdana;font-size:37px;"><center>Order Custom Sword!</center> </h2>
     </div>
             
         <h2 style="font-family:verdana;font-size:30px;"><center>Available Swords:</center></h2>
