Added Embedded Website Testing

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="About Page.html">About</a></li>
 			<li><a href="Contact Page.html">Contact</a></li>
+            <li><a href="embed_web_test.html">Embedded Info</a></li>
 		</ul>
 
 		<ul>
