--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -11,6 +11,8 @@
 
     <!-- Embedding a website -->
     <iframe src="https://rsd.sccs.swarthmore.edu/issue/2023/10/23/" width="100%" height="500"></iframe>
+    <iframe src="https://weather.com/weather/today/l/161f1b40e9788fc0ab993a51b497e0f3925a88fb5eeac81e9a76f5b56f8422dd" width="100%" height="500"></iframe>
+
 
     <!-- You can embed multiple websites by adding more iframes -->
 
