--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -10,6 +10,11 @@
     <h1>Embedding Websites</h1>
 
     <!-- Embedding a website -->
+    <a class="weatherwidget-io" href="https://forecast7.com/en/39d90n75d35/swarthmore/?unit=us" data-label_1="SWARTHMORE" data-label_2="WEATHER" data-theme="original" >SWARTHMORE WEATHER</a>
+    <script>    
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+    </script>
+
     <iframe src="https://rsd.sccs.swarthmore.edu/issue/2023/10/23/" width="100%" height="500"></iframe>
     <iframe src="https://weather.com/weather/today/l/161f1b40e9788fc0ab993a51b497e0f3925a88fb5eeac81e9a76f5b56f8422dd" width="100%" height="500"></iframe>
 
