--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -14,7 +14,8 @@
     <script>    
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>
-
+    <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    
     <iframe src="https://rsd.sccs.swarthmore.edu/issue/2023/10/23/" width="100%" height="500"></iframe>
     <iframe src="https://weather.com/weather/today/l/161f1b40e9788fc0ab993a51b497e0f3925a88fb5eeac81e9a76f5b56f8422dd" width="100%" height="500"></iframe>
 
