--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        /* CSS to center the title */
+        title {
+            text-align: center;
+        }
+    </style>
     <title>Embedded Website</title>
 </head>
 <body>
