--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -17,11 +17,19 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+        .centeredtitle{
+            margin: 0;
+            position: absolute;
+            top: 1%;
+            left: 505%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
     </style>
     <title>Embedded Website</title>
 </head>
 <body>
-    <h1>Embedding Websites</h1>
+    <h1> <div class = 'centeredtitle'> Embedding Websites </div></h1>
 
     <!-- Embedding a website -->
     <a class="weatherwidget-io" href="https://forecast7.com/en/39d90n75d35/swarthmore/?unit=us" data-label_1="SWARTHMORE" data-label_2="WEATHER" data-theme="original" >SWARTHMORE WEATHER</a>
