--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -19,13 +19,17 @@
         }
         .centeredtitle{
             left: 50%;
-
+            font-family: Arial, verdana;
+            align-items: center;
+        }
+        body{
+            background-color: #a9cee5; /* Set the background color here */
         }
     </style>
     <title>Embedded Website</title>
 </head>
 <body>
-    <h1> <div class = 'centeredtitle'> Embedding Websites </div></h1>
+    <h1> <div class = 'centeredtitle'> Embed </div></h1>
 
     <!-- Embedding a website -->
     <a class="weatherwidget-io" href="https://forecast7.com/en/39d90n75d35/swarthmore/?unit=us" data-label_1="SWARTHMORE" data-label_2="WEATHER" data-theme="original" >SWARTHMORE WEATHER</a>
@@ -35,7 +39,7 @@
     <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York" style="border: 0" background-color= "rgb(245, 166, 195)" width="800" height="600" frameborder="5" scrolling="no"></iframe>
     
     <div class = 'centeredcontent'>
-    <iframe src="https://free.timeanddate.com/clock/i93031c1/n198/fn6/fs48/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="304" height="119"></iframe>
+    <iframe src="https://free.timeanddate.com/clock/i9321o6v/n198/fs48/tct/pct/ftb/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="296" height="112" allowtransparency="true"></iframe>
     </div>
 
     <div>
