--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -23,7 +23,7 @@
             align-items: center;
         }
         .rightmade{
-            left: 75%;
+            float: right;
         }
         body{
             background-color: #a9cee5; /* Set the background color here */
