--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -63,7 +63,7 @@
 
 
 
-    <iframe src="https://dash.swarthmore.edu/" width="100%" height="500"></iframe>
+    <iframe src="https://dash.swarthmore.edu/#Menus" width="100%" height="500"></iframe>
     <iframe src="https://weather.com/weather/today/l/161f1b40e9788fc0ab993a51b497e0f3925a88fb5eeac81e9a76f5b56f8422dd" width="100%" height="500"></iframe>
 
 
