--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -52,7 +52,7 @@
 
     <div class = 'nextto'>
     <h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York" style="border: 0" background-color= "rgb(245, 166, 195)" width="800" height="600" frameborder="5" scrolling="no" ></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York"  background-color= "rgb(245, 166, 195)" width="800" height="600"  scrolling="no" ></iframe>
     <iframe src="https://dash.swarthmore.edu/#Menus" width="50%" height="500"></iframe>
     </h2>
     </div>
