--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -50,14 +50,14 @@
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>
 
-    
+    <div class = 'nextto'>
     <h2>
     <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York"  background-color= "rgb(245, 166, 195)" width="800" height="600"  scrolling="no" ></iframe>
       <div class = 'rightmade'>
-    <iframe src="https://dash.swarthmore.edu/#Menus" width="100%" height="500"></iframe>
+    <iframe src="https://dash.swarthmore.edu/#Menus" width="200%" height="500"></iframe>
       </div>
     </h2>
-    
+    </div>
 
     <div>
         <h1>Cat Generator</h1>
