--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -60,8 +60,8 @@
     </div>
 
     <div>
-        <h1>Cat Generator</h1>
-        <img id="catImg" src="https://dog.ceo/api/breeds/image/random" alt="">
+        <h1>Human Generator</h1>
+        <img id="catImg" src="https://thispersondoesnotexist.com/" alt="">
       </div>
       
       <div>
