--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -61,12 +61,10 @@
 
     <div>
         <h1>Human Generator</h1>
-        <img id="catImg" src="https://thispersondoesnotexist.com/" alt="">
+        <iframe src="https://thispersondoesnotexist.com/" width="20%" height = "20%"></iframe>
       </div>
       
-      <div>
-        <button id="btn">New Cat</button>
-      </div>
+      
 
 
 
