--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -61,7 +61,7 @@
 
     <div>
         <h1>Human Generator</h1>
-        <iframe src="https://thispersondoesnotexist.com/" width="200" height = "200"></iframe>
+        <iframe src="https://thispersondoesnotexist.com/" width="200" height = "200" scale = "tofit"></iframe>
       </div>
       
       
