--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -61,7 +61,7 @@
 
     <div>
         <h1>Human Generator</h1>
-        <iframe src="https://thispersondoesnotexist.com/" width="500" height = "500" scale = "tofit"></iframe>
+        <iframe src="https://thispersondoesnotexist.com/" width="500" height = "500" scale = "tofit" frameborder = "0" allowfullscreen></iframe>
       </div>
       
       
