--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -18,12 +18,14 @@
             transform: translate(-50%, -50%);
         }
         .centeredtitle{
-            left: 50%;
             font-family: Arial, verdana;
             align-items: center;
         }
         .rightmade{
             float: right;
+        }
+        .leftmade{
+            float: left;
         }
         .nextto{
             display: flex;
@@ -36,9 +38,13 @@
     <title>Embedded Website</title>
 </head>
 <body>
-    <h1> 
+    <h1> <div class = "leftmade">
         <iframe src="https://free.timeanddate.com/clock/i9321o6v/n198/fn6/fs48/tct/pct/ahl/ftb" frameborder="0" width="280" height="61" allowtransparency="true"></iframe>
+        </div>
         <div class = 'rightmade'>
+            <div class="centeredtitle">
+            Reserved Aidan's Digest
+            </div>
         <iframe src="https://free.timeanddate.com/clock/i9321o6v/n198/fn6/fs48/tct/pct/ftb/tt1/tw0" frameborder="0" width="459" height="61" allowtransparency="true"></iframe>
         </div>
     </h1>
