--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -30,6 +30,9 @@
             display: flex;
             justify-content: space-between;
         }
+        .downtime{
+            margin-top: 400px;
+        }
         body{
             background-color: #a9cee5; /* Set the background color here */
         }
@@ -40,9 +43,6 @@
     <h1> <div class = "leftmade">
         <iframe src="https://free.timeanddate.com/clock/i9321o6v/n198/fn6/fs48/tct/pct/ahl/ftb" frameborder="0" width="280" height="61" allowtransparency="true"></iframe>
         </div>
-        
-          
-
         <div class = 'rightmade'>
         <iframe src="https://free.timeanddate.com/clock/i9321o6v/n198/fn6/fs48/tct/pct/ftb/tt1/tw0" frameborder="0" width="459" height="61" allowtransparency="true"></iframe>
         </div>
@@ -50,10 +50,12 @@
 
 </body>
     <!-- Embedding a website -->
+    <div class="downtime">
     <a class="weatherwidget-io" href="https://forecast7.com/en/39d90n75d35/swarthmore/?unit=us" data-label_1="SWARTHMORE" data-label_2="WEATHER" data-theme="original" >SWARTHMORE WEATHER</a>
     <script>    
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>
+    </div>
 
     <div class = 'nextto'>
     <h2>
