--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -31,7 +31,9 @@
             justify-content: space-between;
         }
         .downtime{
-            margin-top: 400px;
+            justify-content: space-between;
+            top: 40%;
+
         }
         body{
             background-color: #a9cee5; /* Set the background color here */
