--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -64,7 +64,7 @@
 
     <div>
         <h1>Human Generator</h1>
-        <iframe src="https://thispersondoesnotexist.com/" width="500" height = "500" scale = "tofit" frameborder = "0" allowfullscreen></iframe>
+        <iframe src="https://thispersondoesnotexist.com/" width="50%" height = "50%" zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
       </div>
       
       
