--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -81,8 +81,8 @@
   </script>
 
     <div>
-        <h1>Human Generator</h1>
-        <iframe src="https://thispersondoesnotexist.com/" width="50%" height = "50%" zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
+        <h1>Shuttle Map</h1>
+        <iframe src="https://swarthmore.transloc.com/?route=4015048"  zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
       </div>
       
       
