--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -82,7 +82,7 @@
 
     <div>
         <h1>Shuttle Map</h1>
-        <iframe src="https://swarthmore.transloc.com/?route=4015048"  zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
+        <iframe src="https://swarthmore.transloc.com/?route=4015048" width="400px" height = "400px" zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
       </div>
       
       
