--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -80,10 +80,9 @@
     makeAPICall()
   </script>
 
-    <div>
-        <h1>Shuttle Map</h1>
+    <div class="nextto">
         <iframe src="https://swarthmore.transloc.com/?route=4015048" width="800px" height = "700px" zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
-        <iframe src="https://random-ize.com/random-youtube/" width="100%" height="500"></iframe>
+        <iframe src="https://random-ize.com/random-youtube/" width="50%" height="500"></iframe>
     </div>
       
       
