--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -83,7 +83,9 @@
     <div class="nextto">
         <iframe src="https://swarthmore.transloc.com/?route=4015048" width="800px" height = "700px" zoom = "0.5" overflow:hidden frameborder = "0"  allowfullscreen></iframe>
         <iframe src="https://random-ize.com/random-youtube/" zoom = '.5' width="50%" height="500" </iframe>
+        <div class="tenor-gif-embed" data-postid="24535627" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/meme-gif-24535627">Meme Sticker</a>from <a href="https://tenor.com/search/meme-stickers">Meme Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </div> 
+
       
     <!--AHHHHHHHHHHHHHHHH-->
     <iframe height="300" style="width: 25%;" scrolling="no" title="Random Gif Generator w/ Giphy API" src="https://codepen.io/ChynoDeluxe/embed/WGQzWW?default-tab=result&theme-id=dark" frameborder="yes" loading="lazy" allowtransparency="true" allowfullscreen="true">
