--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -26,7 +26,10 @@
             float: right;
         }
         .leftmade{
-            float: left
+            float: left;
+        }
+        .middlemade{
+            float: middle;
         }
         .nextto{
             display: flex;
@@ -62,8 +65,9 @@
       </div>
     </h2>
     </div>
+    <div class = 'middlemade'>
     <div class="tenor-gif-embed" data-postid="24535627" data-share-method="host" data-aspect-ratio="1" data-width="10%"><a href="https://tenor.com/view/meme-gif-24535627">Meme Sticker</a>from <a href="https://tenor.com/search/meme-stickers">Meme Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-
+    </div>
 
     <!-- Create a container element to display the API data -->
   <div id="apiData"></div>
