--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -30,6 +30,7 @@
         }
         .middlemade{
             float: middle;
+            left: 50%;
         }
         .nextto{
             display: flex;
