--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -32,6 +32,7 @@
     </style>
     <title>Embedded Website</title>
 </head>
+
 <body>
     <!-- Time, Logo, and Date in the same row -->
     <div class="container">
@@ -66,7 +67,8 @@
     <h2>
     <iframe src="https://calendar.google.com/calendar/embed?src=acorpus1%40swarthmore.edu&ctz=America%2FNew_York"  background-color= "rgb(245, 166, 195)" width="500vw" height="600"  scrolling="no" ></iframe>
     <iframe src="https://dash.swarthmore.edu/menu/dining-center" width="500vw" height="600"></iframe>
-    </h2>
+    <iframe src="https://docs.google.com/document/d/15jvgFLQtFKIuVZb1nKe9JuPsPeE1LSnc75q66uU10vY/edit?usp=sharing" width="480" height="600"></iframe>
+</h2>
     </div>
 <!--
     <iframe height="300" style="width: 25%;" scrolling="no" title="Random Gif Generator w/ Giphy API" src="https://codepen.io/ChynoDeluxe/embed/WGQzWW?default-tab=result&theme-id=dark" frameborder="yes" loading="lazy" allowtransparency="true" allowfullscreen="true">
