--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -79,9 +79,12 @@
 -->
 
     <div class = 'middlemade'>
-    <div class="tenor-gif-embed" data-postid="24535627" data-share-method="host" data-aspect-ratio="1" data-width="10%"><a href="https://tenor.com/view/meme-gif-24535627">Meme Sticker</a>from <a href="https://tenor.com/search/meme-stickers">Meme Stickers</a></div> 
-    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    </div>
+    <img src="jumpcat.gif" alt="Jumping Cat GIF">
+    <img src="applecat.gif" alt="Jumping Cat GIF">
+    <img src="jumpcat.gif" alt="Jumping Cat GIF">
+    <img src="capplecatrun.gif" alt="Running Cat Apple" width="150" height="auto">
+    <img src="bananacat.gif" alt="Jumping Cat GIF" width="150" height="auto">
+</div>
 
     <!-- Create a container element to display the API data -->
   <div id="apiData"></div>
