--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -83,7 +83,7 @@
     <img src="applecat.gif" alt="Jumping Cat GIF">
     <img src="jumpcat.gif" alt="Jumping Cat GIF">
     <img src="capplecatrun.gif" alt="Running Cat Apple" width="150" height="auto">
-    <img src="bananacat.gif" alt="Jumping Cat GIF" width="150" height="auto">
+    <img src="bananacat.gif" alt="Jumping Cat GIF" style="float: right; width: 300px; height: auto;">
 </div>
 
     <!-- Create a container element to display the API data -->
