--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -80,9 +80,9 @@
 
     <div class = 'middlemade'>
     <img src="jumpcat.gif" alt="Jumping Cat GIF">
-    <img src="applecat.gif" alt="Jumping Cat GIF">
-    <img src="jumpcat.gif" alt="Jumping Cat GIF">
+    <img src="applecat.gif" alt="Jumping Cat GIF" style="transform: scaleX(-1)">
     <img src="capplecatrun.gif" alt="Running Cat Apple" width="150" height="auto">
+    <img src="jumpcat.gif" alt="Jumping Cat GIF" style="transform: scaleX(-1)">
     <img src="bananacat.gif" alt="Jumping Cat GIF" style="float: right; width: 300px; height: auto;">
 </div>
 
